exports[`agency rest endpoint should add model 1`] = `
Array [
  Object {
    "__v": 0,
    "name": "test-agency",
    "organizations": Array [],
  },
]
`;

exports[`agency rest endpoint should get model 1`] = `
Object {
  "__v": 0,
  "name": "test-agency",
  "organizations": Array [],
}
`;

exports[`agency rest endpoint should update model 1`] = `
Object {
  "__v": 0,
  "name": "updated name",
  "organizations": Array [],
}
`;
